# tirinha

./: .gitignore  Cargo.toml
src/: main.rs
